@@ -1,6 +1,6 @@
 #define RUBY_VERSION "2.1.5"
 #define RUBY_RELEASE_DATE "2015-01-22"
-#define RUBY_PATCHLEVEL 281
+#define RUBY_PATCHLEVEL 282
 
 #define RUBY_RELEASE_YEAR 2015
 #define RUBY_RELEASE_MONTH 1
